2009-11-09  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DataGridTextBoxColumn.cs:
	* DataGrid.cs: Position the cursor in the add row should *not* show
	yet another new row - that will happen till we get any real input data
	from the user. When that happens, we will also mark the new row as
	ready to commit - otherwise, when the cursor moves to a different row,
	the just added row will be discarded. This is exactly what .Net seems
	to do.

2009-11-09  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DataGrid.cs: The large value for our vertical scrollbar should
	depend on the number of visible rows, instead of trying to re-use the
	value of VisibleRowCount, which is the value of *current* visible
	rows, and can easily end messed up if new rows are added/removed.

2009-11-09  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DataGrid.cs: When moving the scroll, *dont* ever end the current
	edit - this could seriously mess up our current edit cycle, specially
	when adding new rows.

2009-11-02  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* TabControl.cs: In OnKeyDown call the base implementation first -
	this way we let the user tell us whether we should handle the key or
	not.
	Fixes #543717.

2009-11-02  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DataGrid.cs: Implement removal of rows the Correct Way by creating a
	copy of the indexes, as any direct write access to the source will cause to
	reset the entire selection - also, do the linear de-selection in
	reverse order to avoid any index mismatch in the source, due to out of
	synchronization removing the rows.

2009-11-02  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DataGridTextBoxColumn.cs:
	* DataGrid.cs: Don't use this add-pending behaviour to try to add a
	new row until we have the first input char - it was helping us to fix
	other issues we have/had, but it's not matching .net.

2009-10-30  Carlos Alberto Cortez <calberto.cortez@gmail.com>
